@startuml BitePlate_Class_ObserverPattern
title BitePlate SRMS — Observer Pattern (Focused Diagram)

skinparam backgroundColor white
skinparam classAttributeIconSize 0

note as N1
  OBSERVER PATTERN
  Order (Subject) notifies all registered
  observers on every status change.
  Redis Pub/Sub delivers real-time
  notifications to connected clients.
end note

interface OrderObserver <<Observer>> {
  +onOrderStatusChanged(order : Order, status : OrderStatus) : void
}

interface OrderSubject <<Subject>> {
  +registerObserver(o : OrderObserver) : void
  +removeObserver(o : OrderObserver) : void
  +notifyObservers() : void
}

class Order <<ConcreteSubject>> {
  -id : Long
  -status : OrderStatus
  -observers : List<OrderObserver>  {transient}
  +registerObserver(o : OrderObserver) : void
  +removeObserver(o : OrderObserver) : void
  +updateStatus(s : OrderStatus) : void
  -notifyObservers() : void
}

class WaiterNotifier <<ConcreteObserver>> {
  -publisher : RedisNotificationPublisher
  -CHANNEL : String = "notifications:waiter"  {static}
  +onOrderStatusChanged(order : Order, status : OrderStatus) : void
}

class ManagerDashboard <<ConcreteObserver>> {
  -publisher : RedisNotificationPublisher
  -CHANNEL : String = "notifications:manager"  {static}
  +onOrderStatusChanged(order : Order, status : OrderStatus) : void
}

class KitchenDisplayObserver <<ConcreteObserver>> {
  -publisher : RedisNotificationPublisher
  -CHANNEL : String = "notifications:kitchen"  {static}
  +onOrderStatusChanged(order : Order, status : OrderStatus) : void
}

class RedisNotificationPublisher {
  -redisTemplate : RedisTemplate<String, Object>
  +publish(channel : String, message : String) : void
}

class OrderService {
  +createOrder(tableId : Long) : Order
  -registerObservers(order : Order) : void
}

Order ..|> OrderSubject
Order "1" o-- "0..*" OrderObserver : observers >
WaiterNotifier         ..|> OrderObserver
ManagerDashboard       ..|> OrderObserver
KitchenDisplayObserver ..|> OrderObserver
WaiterNotifier         --> RedisNotificationPublisher : publish >
ManagerDashboard       --> RedisNotificationPublisher : publish >
KitchenDisplayObserver --> RedisNotificationPublisher : publish >
OrderService ..> Order : createOrder >
OrderService ..> WaiterNotifier : registerObserver >
OrderService ..> ManagerDashboard : registerObserver >
OrderService ..> KitchenDisplayObserver : registerObserver >

note bottom of Order
  updateStatus(status):
    this.status = status
    notifyObservers()

  notifyObservers():
    for each observer in observers:
      observer.onOrderStatusChanged(this, status)
end note

note bottom of WaiterNotifier
  onOrderStatusChanged():
    if status == READY:
      publisher.publish(CHANNEL,
        "ORDER READY: Table " + tableId)
end note

@enduml
